[workspace]
resolver = '2'

members = [
    "02 - Environment Setup/code/cw-starter",
    "03 - What Are All These Files/code/cw-starter",
    "code/cw-starter",
]


[workspace.package]
version = "0.1.1"
authors = ["Oraichain Labs"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oraichain/cosmwasm-zero-to-hero.git"
homepage = "https://orai.io"
documentation = "https://github.com/oraichain/cosmwasm-zero-to-hero.git"
exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

[workspace.dependencies]
cosmwasm-std = { version = "1.1.9" }
cosmwasm-schema = "1.1.9"
cosmwasm-storage = { version = "1.1.9" }
thiserror = "1.0.26"
cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1" }
cw-storage-plus = { version = "1.0.1" }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
panic = 'abort'
